--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
-                    <Main-Class>com.mycompany.test.App</Main-Class>
+                    <Main-Class>com.mycompany.server.App</Main-Class>
                     <Build-Number>123</Build-Number>
                   </manifestEntries>
                 </transformer>
